[package]
name = "cluster-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k8s-openapi = { version = "0.21.0", features = ["latest", "schemars"] }
# kube = { path = "../kube/kube", features = ["derive", "runtime", "client"] }
# kube-core = { path = "../kube/kube-core" }
kube = { version = "0.88.0", features = ["derive", "runtime", "client"] }
kube-core = "0.88.0"
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
prometheus = "0.13.3"
actix-web = "4.4.1"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
thiserror = "1.0.44"
futures = "0.3.30"
docker-api = "0.14.0"
